--- a/style/series-detail.css
+++ b/style/series-detail.css
@@ -30,8 +30,11 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: rgb(45, 45, 45);
+    background-color: rgb(0, 0, 0);
     border-radius: 7px;
+    padding: 20px;
+    margin-top: 100px;
+    
 }
 
 #tv-info{
