--- a/style/series.css
+++ b/style/series.css
@@ -38,3 +38,30 @@ li{
     transition: transform 0.5s;
     filter: brightness(0.5);
 }
+
+/* search form */
+#search-form {
+    display: flex;
+    align-items: center;
+  }
+  
+  #search-input {
+    padding: 10px;
+    width: 200px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  
