--- a/style/detail.css
+++ b/style/detail.css
@@ -16,6 +16,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    color: white;
 }
 
 #tv-item img{
@@ -34,7 +35,7 @@ body{
     border-radius: 7px;
     padding: 20px;
     margin-top: 100px;
-    
+    border: 1px solid yellow; 
 }
 
 #tv-info{
@@ -64,7 +65,7 @@ body{
     border: 1px solid black; /* Bordure jaune */
     border-radius: 10px;
     padding: 1rem;
-    min-height: 200px;
+    min-height: 250px;
     position: relative;
 }
 
@@ -118,3 +119,98 @@ body{
     outline: 0;
   }
   
+
+  .navbar-nav{
+    width: 100%;
+}
+
+@media(min-width:568px){
+    .end{
+        margin-left: auto;
+    }
+}
+
+@media(max-width:768px){
+    #post{
+        width: 100%;
+    }
+}
+#clicked{
+    padding-top: 1px;
+    padding-bottom: 1px;
+    text-align: center;
+    width: 100%;
+    background-color: #ecb21f;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: black;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 13px; 
+}
+
+#profile{
+    background-color: unset;
+    
+} 
+
+#post{
+    margin: 10px;
+    padding: 6px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    text-align: center;
+    background-color: #ecb21f;
+    border-color: #a88734 #9c7e31 #846a29;
+    color: black;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 13px;
+    width: 50%;
+}
+
+#nav-items li a,#profile{
+    text-decoration: none;
+    color: rgb(187, 14, 14);
+    background-color: rgb(145, 92, 92);
+}
+
+
+#comment-container {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+  }
+  
+  .comment {
+    margin-bottom: 20px;
+    padding: 10px;
+    background-color: #000000;
+    border: 1px solid #e5ff00;
+    border-radius: 5px;
+  }
+  
+  .comment h4 {
+    margin-bottom: 5px;
+    font-size: 18px;
+  }
+  
+  .comment p {
+    font-size: 16px;
+  }
+  
+  #comment-container,
+  #comment-form {
+      border: 1px solid yellow; 
+      border-radius: 10px; 
+      padding: 15px;
+  }
+  
+.main-bg {
+    background: linear-gradient(360deg, #1C1C1C 10%, #494949 360%);
+    min-height: 100vh;
+}
+
+.main-bg {
+    padding: 10px;
+}
