--- a/style/detail.css
+++ b/style/detail.css
@@ -71,7 +71,10 @@ body{
 
 /* Effet de survol sur chaque carte de résultat de recherche */
 #search-results .card:hover {
-    box-shadow: 0 0 30px rgba(255, 255, 0, 0.5); /* Ombre jaune au survol */
+    box-shadow: 0 0 30px yellow; /* Ombre jaune au survol */
+    transform: scale(1.1);
+    transition: transform 0.5s;
+    filter: brightness(0.5);
 }
 
 /* Style pour le titre à l'intérieur de chaque carte */
