--- a/style/detail.css
+++ b/style/detail.css
@@ -65,15 +65,13 @@ body{
     background-color: #29292985;
     border: 1px solid black; /* Bordure jaune */
     border-radius: 10px;
-    padding: 1rem;
-    height: 280px;
-    width: 100%;
+
     position: relative;
 }
 
 /* Effet de survol sur chaque carte de résultat de recherche */
 #search-results .card:hover {
-    box-shadow: 0 0 30px yellow;
+    box-shadow: 0 0 130px yellow;
     transform: scale(1.1);
     transition: transform 0.5s;
     filter: brightness(0.5);
@@ -101,7 +99,7 @@ body{
 
 /* Effet de survol sur l'image */
 #search-results img:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: transform 0.5s;
     filter: brightness(0.5);
 }
@@ -210,7 +208,7 @@ body{
   }
   
 .main-bg {
-    background: linear-gradient(360deg, #1C1C1C 10%, #494949 360%);
+    background: black;
     min-height: 100vh;
 }
 
