--- a/style/detail.css
+++ b/style/detail.css
@@ -20,7 +20,7 @@ body{
 }
 
 #tv-item img{
-    width: 20%;
+    width: 25%;
     object-fit: cover;
     border-radius: 10px;
     margin: 10px 10px;
@@ -28,7 +28,7 @@ body{
 
 #tv-item{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0);
@@ -37,6 +37,56 @@ body{
     margin-top: 100px;
     border: 1px solid yellow; 
 }
+
+
+@media (max-width: 1100px) {
+    #tv-item{
+        display: flex;
+        flex-direction: column; 
+    }
+
+    #tv-item img{
+        width: 50%;
+    }
+    
+}
+
+@media (max-width: 768px) {
+    #tv-item img{
+        width: 50%;
+    }
+    #tv-info{
+        margin-top: 20px;
+    }
+    
+}
+
+@media (max-width: 500px) {
+    #tv-item img{
+        width: 100%;
+    }
+
+    #tv-item h2{
+        font-size: 1.5rem;
+    }
+
+    #tv-info{
+        margin-top: 20px;
+    }
+
+    p{
+        font-size: 0.8rem;
+    }
+
+    #actor img {
+        width: auto;
+    }
+
+    
+    
+}
+
+
 
 #tv-info{
     display: flex;
@@ -58,7 +108,6 @@ body{
 
 #tv-cast {
     margin-top: 50px;
-    margin-left:50px ;
     display: flex;
     justify-content: center;
 }
@@ -71,7 +120,7 @@ body{
 }
 
 #actor img {
-    width: 100%;
+    width: 70%;
     object-fit: cover;
     border-radius: 10px;
 }
@@ -245,3 +294,5 @@ body{
 .main-bg {
     padding: 10px;
 }
+
+
