--- a/style/detail.css
+++ b/style/detail.css
@@ -7,6 +7,10 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: black;
 }
 
 
@@ -144,7 +148,6 @@ body{
     background-color: #29292985;
     border: 1px solid black; /* Bordure jaune */
     border-radius: 10px;
-
     position: relative;
 }
 
@@ -158,12 +161,13 @@ body{
 
 /* Style pour le titre à l'intérieur de chaque carte */
 #search-results .card h2 {
+    font-size: 16px;
     margin: 0;
     align-self: flex-start;
     justify-self: flex-start;
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 0px;
+    left: 5px;
     color: yellow;
     text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
@@ -295,4 +299,6 @@ body{
     padding: 10px;
 }
 
-
+img.logo {
+    border-radius: 50%;
+}
