--- a/style/series.css
+++ b/style/series.css
@@ -6,6 +6,10 @@
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: black;
 }
 
 #tv-list{
@@ -66,12 +70,13 @@ li{
 
 /* Style pour le titre à l'intérieur de chaque carte */
 #search-results .card h2 {
+    font-size: 16px;
     margin: 0;
     align-self: flex-start;
     justify-self: flex-start;
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 0px;
+    left: 5px;
     color: yellow;
     text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
@@ -107,13 +112,15 @@ li{
     outline: 0;
   }
   
-  .main-bg {
+.main-bg {
     background: black;
     min-height: 100vh;
-}
-
-.main-bg {
     padding: 10px;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
-
+img.logo {
+    border-radius: 50%;
+}
