Système de gestion des favoris :
Ajout de la gestion des favoris sur la page Favoris :

Les favoris stockés dans le localStorage sont maintenant affichés sur la page Favoris.

Chaque favori est affiché sous forme de carte avec une image, un titre, un résumé et un bouton pour le supprimer des favoris.

Correction des duplications de cartes :

Les duplications de cartes ont été corrigées en ajoutant une vérification pour s'assurer que la réponse de l'API est valide avant de créer une carte.

Ajout de la gestion des favoris pour les séries TV :

Les favoris pour les séries TV sont désormais également pris en charge. Les cartes des séries TV sont affichées de la même manière que pour les films.

Suppression des favoris :

Les utilisateurs peuvent désormais supprimer des éléments de leurs favoris en cliquant sur le bouton correspondant sur la carte.

--- a/style/series.css
+++ b/style/series.css
@@ -141,3 +141,6 @@ img.logo {
     background-color: yellow; /* Couleur de la barre de défilement */
   }
   
+  .favorite-icon {
+    color: red;
+}
