--- a/style/detail.css
+++ b/style/detail.css
@@ -319,3 +319,6 @@ img.logo {
     background-color: yellow; /* Couleur de la barre de défilement */
   }
   
+  .favorite-icon {
+    color: red;
+}
