--- a/style/series.css
+++ b/style/series.css
@@ -141,6 +141,13 @@ img.logo {
     background-color: yellow; /* Couleur de la barre de défilement */
   }
   
-  .favorite-icon {
+/* Style pour l'icône de favoris */
+.favorite-icon {
     color: red;
-}
+    }
+    
+    /* Style pour l'icône de favoris lorsqu'elle est déjà dans les favoris */
+    .favorite-icon.favorited {
+        color: yellow; /* Changer la couleur de l'icône lorsqu'elle est déjà dans les favoris */
+    }
+    
