font + css header
font + css header

--- a/style/detail.css
+++ b/style/detail.css
@@ -153,7 +153,7 @@ body{
 
 /* Effet de survol sur chaque carte de résultat de recherche */
 #search-results .card:hover {
-    box-shadow: 0 0 130px yellow;
+    box-shadow: 0 0 30px yellow;
     transform: scale(1.1);
     transition: transform 0.5s;
     filter: brightness(0.5);
@@ -168,7 +168,7 @@ body{
     position: absolute;
     top: 0px;
     left: 5px;
-    color: yellow;
+    color: whitesmoke;
     text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
 
@@ -327,3 +327,36 @@ img.logo {
     color: yellow;
 }
 
+/* police Quicksand */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+body {
+    font-family: 'Quicksand', sans-serif;
+}
+
+
+h1 {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 700; 
+    font-size: 2rem; 
+}
+
+p {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400; 
+    font-size: 1rem; 
+}
+
+#search-results h2 {
+    font-family: 'Quicksand', sans-serif;
+}
+
+#search-results p {
+    font-family: 'Quicksand', sans-serif;
+}
+
+/* Header soulignement */
+.nav-link:hover,
+.nav-link.active {
+    border-bottom: 2px solid #FFC107;
+}
