--- a/style/detail.css
+++ b/style/detail.css
@@ -196,7 +196,7 @@ body{
     position: absolute;
     top: 0px;
     left: 5px;
-    color: whitesmoke;
+    color: yellow;
     text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
 
@@ -360,4 +360,13 @@ img.logo {
 .nav-link:hover,
 .nav-link.active {
     border-bottom: 2px solid #FFC107;
+}
+
+.overview-container {
+    border: 1px solid yellow;
+    border-radius: 5px; 
+    padding: 10px;
+    max-width: 600px; 
+    margin: 0 auto; 
+    margin-top: 10px;
 }
