--- a/style/series.css
+++ b/style/series.css
@@ -105,7 +105,7 @@ li{
     position: absolute;
     top: 0px;
     left: 5px;
-    color: whitesmoke;
+    color: yellow;
     text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
 }
 
